Reactor refactor and copy the rest of update 10's code in